# pd_c_template

./: .gitignore  CMakeLists.txt  Makefile  test.sh
Source/: pdex.dylib  pdex.elf  pdxinfo
src/: CMakeLists.txt  arena.c  arena.h  main.c  types.h
